--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'T'
 - !lcsh 'Science -- Periodicals'
+- GITenberg
 title: Scientific American Supplement, No. 1178, June 25, 1898
 url: http://www.gutenberg.org/ebooks/18265
